2011-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: s/messsage/message/.

2011-06-09  Dustin J. Mitchell <dustin@mozilla.com>
	* client-src/selfcheck.c: Push down tmpbuf and remove some duplicate
	  code; fixes compiles with SAMBA_VERSION not defined

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* gnulib/*: revert blind perl one-liner replacement of alloc to
	  g_malloc, by doing the reverse transform exactly

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* oldrecover-src/amrecover.c: fix one more wrong g_str_has_prefix()
	  usage

2011-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c,
	  recover-src/extract_list.c: Fix g_str_has_prefix.
	* server-src/amtrmlog.c: Revert g_str_has_prefix. fix.

2011-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Fix g_str_has_prefix.

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (77): use g_str_equal() insteadl of strcmp(...) == 0 (and
	  reverse),use g_str_has_prefix() instead of strncmp(...) == 0 (and
	  reverse)

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/alloc.c, common-src/amanda.h: goodbye vstrextend() and
	  internal_vstralloc()

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/tapefile.c: list_new_tapes(): replace vstrextend() usage
	  with a GString; rework exit paths

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/dumper.c: delay_one_dump(): replace vstrextend() with a
	  GPtrArray/GString combination; create one local variable

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/dumper.c: startup_dump(): replace vstrextend() with a
	  GString; fix boolean usage

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/driverio.c: dumper_cmd(): replace vstrextend() usage with a
	  GPtrArray, and replace some g_strjoin() usages with g_strdup_printf()

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>