@@ -1,3 +1,6 @@
+2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
+	* common-src/match.c: group functions logically together, add comments
+
 2011-06-13  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Worker.pm: s/messsage/message/.
 
